--- a/WebApplication1/Views/Shared/_TestLayout.cshtml
+++ b/WebApplication1/Views/Shared/_TestLayout.cshtml
@@ -83,7 +83,7 @@
                     <a class="hsubs" href="#">NEDİR</a>
                     <ul class="subs">
                         <li><a href="/API/Index/">API NEDİR</a></li>
-                        <li><a href="/Blog/Index/">CDN NEDİR</a></li>
+                        <li><a href="/CDN_/Index/">CDN NEDİR</a></li>
                         <li><a href="#">DOCKER NEDİR</a></li>
                     </ul>
                 </li>
